--- a/index.html
+++ b/index.html
@@ -3,35 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <title>Monitor DHT11</title>
+
+    <!-- Tailwind CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
 
-    <h1>Datos del sensor DHT11</h1>
+<div class="bg-white shadow-lg rounded-2xl p-8 w-96 text-center">
+    <h1 class="text-2xl font-bold text-blue-600 mb-4">Monitor DHT11</h1>
 
-    <p>Temperatura: <span id="temp">--</span> °C</p>
-    <p>Humedad: <span id="hum">--</span> %</p>
-    <p><span id="estado"></span></p>
+    <div class="space-y-4">
+        <p class="text-lg">Temperatura:
+            <span id="temp" class="font-semibold">--</span> °C
+        </p>
+        <p class="text-lg">Humedad:
+            <span id="hum" class="font-semibold">--</span> %
+        </p>
+    </div>
 
-    <script>
-        function actualizarDatos() {
-            $.get("/datos", function(data) {
-                if (data.error) {
-                    $("#estado").text("Error leyendo el sensor...");
-                } else {
-                    $("#temp").text(data.temperatura);
-                    $("#hum").text(data.humedad);
-                    $("#estado").text("");
-                }
-            });
-        }
+    <p id="estado" class="mt-4 text-red-500 font-medium"></p>
+    <p id="actualizando" class="text-sm text-gray-400 italic mt-2"></p>
+</div>
 
-        // Actualizar cada 2 segundos
-        setInterval(actualizarDatos, 2000);
+<div class="bg-white shadow-lg rounded-2xl p-8 w-96 text-center">
+    <h1 class="text-2xl font-bold text-blue-600 mb-4">Detector de humo - MQ-7</h1>
+</div>
 
-        // Primera lectura
-        actualizarDatos();
-    </script>
+<div class="bg-white shadow-lg rounded-2xl p-8 w-96 text-center">
+    <h1 class="text-2xl font-bold text-blue-600 mb-4">Particulas PM2.5 - PMS5003</h1>
+</div>
+
+
+
+<script>
+    function actualizarDatos() {
+        $("#actualizando").text("Actualizando...");
+        $.get("/datos", function(data) {
+            if (data.error) {
+                $("#estado").text("Error leyendo el sensor...");
+            } else {
+                $("#temp").text(data.temperatura);
+                $("#hum").text(data.humedad);
+                $("#estado").text("");
+            }
+            $("#actualizando").text("");
+        });
+    }
+
+    // Actualizar cada 2 segundos
+    setInterval(actualizarDatos, 2000);
+    actualizarDatos();
+</script>
 
 </body>
 </html>
